--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=97e5f6b2b0fd7ec24d24309bccfadb85
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://iam:xearts6646@localhost:3306/classic-symfony?serverVersion=5.7
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/classic-symfony?serverVersion=14.14
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
